samples/_failures_safe/1761596085_3104cf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3fc4ed83.c: In function ‘main’:
./samples/SAFE/__tmp_3fc4ed83.c:184:16: error: missing terminating " character
  184 |         printf("\t%s\n
      |                ^~~~~~~
./samples/SAFE/__tmp_3fc4ed83.c:184:9: error: expected expression at end of input
  184 |         printf("\t%s\n
      |         ^~~~~~
./samples/SAFE/__tmp_3fc4ed83.c:184:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3fc4ed83.c:184:9: error: expected declaration or statement at end of input
